--- a/src/app.html
+++ b/src/app.html
@@ -5,16 +5,22 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 
+
+		<script>
+			(function() {
+				const theme = localStorage.getItem('theme') || 'light';
+				document.documentElement.classList.add(theme);
+			})();
+		</script>
+
+
 		<!-- GOODLE ADSENSE -->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645646747512700"
 		crossorigin="anonymous"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 
-		<script>
-			const theme = localStorage.getItem('theme') || 'light';
-			document.documentElement.classList.add(theme);
-		  </script>
+
 
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-secondary">
