--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+
+		<!-- PNG Favicons -->
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+
+		<!-- Apple Touch Icon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+
+
 		<link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 
 
