--- a/src/app.html
+++ b/src/app.html
@@ -1,38 +1,54 @@
 <!doctype html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 
-		<!-- PNG Favicons -->
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+    <!-- PNG Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
 
-		<!-- Apple Touch Icon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
 
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin />
+    <link rel="preconnect" href="https://www.googletagservices.com" crossorigin />
 
-		<link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <!-- Preload Fonts -->
+    <link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
 
+    <!-- Load Theme Preference -->
+    <script>
+        (function() {
+            const theme = localStorage.getItem('theme') || 'light';
+            document.documentElement.classList.add(theme);
+        })();
+    </script>
 
-		<script>
-			(function() {
-				const theme = localStorage.getItem('theme') || 'light';
-				document.documentElement.classList.add(theme);
-			})();
-		</script>
+    <!-- Google AdSense (Deferred for Consent) -->
+    <script>
+        function loadAdSense() {
+            const script = document.createElement("script");
+            script.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645646747512700";
+            script.async = true;
+            script.crossOrigin = "anonymous";
+            document.head.appendChild(script);
+        }
 
+        // Example: Only load after user consent
+        document.addEventListener("DOMContentLoaded", () => {
+            if (localStorage.getItem("adsConsent") === "true") {
+                loadAdSense();
+            }
+        });
+    </script>
 
-		<!-- GOODLE ADSENSE -->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645646747512700"
-		crossorigin="anonymous"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-
-
-
-	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-secondary">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %sveltekit.head%
+</head>
+<body data-sveltekit-preload-data="hover" class="bg-secondary">
+    <div style="display: contents">%sveltekit.body%</div>
+</body>
 </html>
