before updating layout for GA

--- a/src/app.html
+++ b/src/app.html
@@ -17,8 +17,9 @@
     <link rel="preconnect" href="https://www.googletagservices.com" crossorigin />
 
     <!-- Preload Fonts -->
-    <link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
-
+	<link rel="preload" href="/fonts/NotoSansJP-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+	<link rel="preload" href="/fonts/NotoSansJP-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+	
     <!-- Load Theme Preference -->
     <script>
         (function() {
